rns-lang/tests/snapshots/parser-class_directive_name-dot_code_as_class_name.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public  .code
.super java/lang/Object

----- STDOUT -----

----- STDERR -----
Error: incomplete class definition
   ╭─[ test_data/integration/parser/class_directive_name/dot_code_as_class_name.ja:1:16 ]
   │
 1 │ .class public  .code
   │                ──┬──  
   │                  ╰──── Expected a class identifier (e.g., 'com/myapp/Main')
   │ 
   │ Note: The .class directive requires a name:
   │       .class [access_flags] <name>
───╯
